# kgonto-rag-eval

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: 01_quickstart.ipynb  _build_quickstart.py
kgonto_rag_eval/: __init__.py  evaluate.py  llm.py  schema.py
kgonto_rag_eval/kg/: __init__.py  graph_eval.py  io.py  personas.py  retrieval_eval.py  testset.py  traceability.py
kgonto_rag_eval/metrics/: __init__.py  answer_correctness.py  answer_relevancy.py  base.py  context_precision.py  context_recall.py  context_relevance.py  faithfulness.py
tests/: test_kg_retrieval_eval.py  test_metrics.py
