[project]
name = "kgonto-rag-eval"
version = "0.1.0"
description = "KG·온톨로지 친화 RAG 평가 프레임워크. 최신 LangChain v1 + gpt-5.4-mini 용 자체 RAGAS 대안."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "yth" }]
keywords = ["rag", "evaluation", "knowledge-graph", "ontology", "graphrag", "llm-as-judge", "ragas"]
dependencies = [
    "langchain>=1.3",
    "langchain-openai>=1.0",
    "langchain-core>=1.0",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/YTH-Public/kgonto-rag-eval"
Repository = "https://github.com/YTH-Public/kgonto-rag-eval"
Issues = "https://github.com/YTH-Public/kgonto-rag-eval/issues"

[project.optional-dependencies]
kg = ["networkx>=3.0"]                # KG 평가셋 생성·온톨로지 평가 (현재 코어)
neo4j = ["langchain-neo4j>=0.10"]     # Neo4j 백엔드 (현재 미사용, 향후 graph RAG 연동용)
pandas = ["pandas>=2.0"]              # EvalReport.to_pandas()

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kgonto_rag_eval"]
